<resources>
    <string name="app_name">iconnect</string>
    <string name="please_wait">Please wait...</string>

    <string name="login">Login</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="user_login">User Login</string>
    <string name="submit">Submit</string>
    <string name="advance_appprove">Advance Approved</string>
    <string name="name">Name</string>
    <string name="multi_select_dialog_title">Select Project</string>
    <string name="designation">Designation</string>
    <string name="headquarter">Headquarter</string>
    <string name="mytravel_request">My Travel Plan</string>
    <string name="approvedtravel_request">Pending Approval for team</string>
    <string name="create_new_travel_request">Create New Travel Request</string>
    <string name="same_day_return">Same Day Return</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="project">Project:</string>
    <string name="date">Date</string>
    <string name="estimated_perdiam">Estimated Perdiam</string>
    <string name="advance_request">% Advance Request(0 - 70)</string>
    <string name="none">None</string>
    <string name="break_fast">Break Fast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="incidental">Incidental</string>
    <string name="leaving_hq">Leaving HQ</string>
    <string name="reaching_hq">Reaching HQ</string>
    <string name="superior_comment">Superior Comment</string>
    <string name="destination">Destination</string>
    <string name="select_project">Select Project</string>
    <string name="go_next">Go Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="fascilities">Fascilities</string>
    <string name="add_travel">Add Travel</string>
    <string name="total_night">Total Night</string>
    <string name="remove_travel">Remove Travel</string>
    <string name="personal_travel">Personal Travel</string>
    <string name="via">Via</string>
    <string name="itineary">Itineary</string>
    <string name="purpose">Purpose</string>
    <string name="advance">Advance</string>
    <string name="any_other_advance">Any Other Advance</string>
    <string name="summary">Summary</string>
    <string name="attach_agenda">Attach Agenda</string>
    <string name="purpose_min">Note: Please enter purpose minimum 10 chracters</string>
    <string name="request">Request</string>
    <string name="day">Day</string>
    <string name="per_diam">Per Diam</string>

    <string name="per_advance">% Advance</string>
    <string name="any_other_purpose">Any Other Purpose</string>
    <string name="open" />
    <string name="close" />

    <string-array name="poject_name">
        <item>Project1  10%</item>
        <item>Project2  10%</item>
        <item>Project3  10%</item>
        <item>Project4  10%</item>
        <item>Project5  10%</item>
        <item>Project6  10%</item>
    </string-array>

    <string-array name="source_station">
        <item>Delhi</item>
        <item>Locknow</item>
        <item>Mumbai</item>
        <item>Hyderabad</item>
        <item>Banglore</item>
        <item>Varanasi</item>
    </string-array>


    <string-array name="destination_station">
        <item>Delhi</item>
        <item>Locknow</item>
        <item>Mumbai</item>
        <item>Hyderabad</item>
        <item>Banglore</item>
        <item>Varanasi</item>
    </string-array>



    <string-array name="navigation_drawer_items_array">
        <item>My Profile</item>
        <item>Our Mission</item>
        <item>Our Vision</item>
        <item>Our Value</item>
        <!--<item>Know PSI</item>-->
        <item>My Travel</item>
        <item>SignOut</item>
    </string-array>

    <string-array name="navigation_drawer_items_array1">
         <item>Our Mission</item>
        <item>Our Vision</item>
        <item>Our Value</item>
    </string-array>


</resources>
