<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/color_blue"
    android:weightSum="4"
    >
    <TextView
        android:id="@+id/purpose"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:text="@string/purpose"
        android:textSize="@dimen/sp_15"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/white"
       />

    <TextView
        android:id="@+id/itineary"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:text="@string/itineary"
        android:textSize="@dimen/sp_15"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/advance"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:text="@string/advance"
        android:textSize="@dimen/sp_15"
        android:layout_weight="1"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/expence"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:text="@string/summary"
        android:textSize="@dimen/sp_15"
        android:layout_weight="1"
        android:textColor="@color/white"/>

</LinearLayout>