<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/bg">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:layout_centerInParent="true"
       android:elevation="10dp"
       android:orientation="vertical"
       android:layout_marginRight="30dp"
       android:layout_marginLeft="30dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/user_login"
          android:textColor="@color/colorPrimary"
          android:textSize="@dimen/dp_20"
          android:textStyle="bold"
          android:layout_gravity="center_horizontal"
          />

      <EditText
          android:id="@+id/et_userName"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_40"
          android:background="@drawable/edit_bg"
          android:layout_marginTop="@dimen/dp_20"
          android:layout_marginLeft="@dimen/dp_20"
          android:layout_marginRight="@dimen/dp_20"
          android:hint="@string/user_name"
          android:paddingLeft="@dimen/dp_10"
          android:textColor="@color/c_grey"
          android:textColorHint="@color/colorAccent"
          android:drawableLeft="@drawable/ic_user"/>

      <EditText
          android:id="@+id/et_password"
          android:layout_marginTop="@dimen/dp_10"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_40"
          android:background="@drawable/edit_bg"
          android:layout_marginLeft="@dimen/dp_20"
          android:layout_marginRight="@dimen/dp_20"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:paddingLeft="@dimen/dp_10"
          android:textColor="@color/c_grey"
          android:textColorHint="@color/colorAccent"
          android:drawableLeft="@drawable/ic_lock"/>

      <Button
          android:id="@+id/login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg"
          android:layout_marginTop="@dimen/dp_40"
          android:text="@string/login"
          />

   </LinearLayout>


</RelativeLayout>