<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginLeft="@dimen/dp_20"
       android:layout_marginRight="@dimen/dp_20">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:paddingRight="@dimen/dp_10"
           android:paddingLeft="@dimen/dp_10"
           android:layout_marginTop="@dimen/dp_30"
           android:orientation="horizontal">

           <TextView
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".6"
               android:textColor="@color/c_dark_blue"
               android:text="@string/request"/>

           <EditText
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".4"
               android:gravity="center"
               android:textColorHint="@color/grey"
               android:background="@drawable/purpose_bg"
               android:hint="0"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:paddingRight="@dimen/dp_10"
           android:paddingLeft="@dimen/dp_10"
           android:layout_marginTop="@dimen/dp_30"
           android:orientation="horizontal">

           <TextView
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".6"
               android:textColor="@color/c_dark_blue"
               android:text="@string/day"/>

           <EditText
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".4"
               android:gravity="center"
               android:textColorHint="@color/grey"
               android:background="@drawable/purpose_bg"
               android:hint="1"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:paddingRight="@dimen/dp_10"
           android:paddingLeft="@dimen/dp_10"

           android:layout_marginTop="@dimen/dp_30"
           android:orientation="horizontal">

           <TextView
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".6"
               android:textColor="@color/c_dark_blue"
               android:text="@string/per_diam"/>

           <EditText
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".4"
               android:textColorHint="@color/grey"
               android:background="@drawable/purpose_bg"
               android:hint="1200"
               android:gravity="center"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:layout_marginTop="@dimen/dp_30"
           android:orientation="horizontal"
           android:paddingRight="@dimen/dp_10"
           android:paddingLeft="@dimen/dp_10">

           <TextView
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".6"
               android:textColor="@color/c_dark_blue"
               android:text="@string/per_advance"/>

           <EditText
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".4"
               android:gravity="center"
               android:textColorHint="@color/grey"
               android:background="@drawable/purpose_bg"
               android:hint="75%"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="1"
           android:gravity="center"
           android:paddingRight="@dimen/dp_10"
           android:paddingLeft="@dimen/dp_10"
           android:layout_marginTop="@dimen/dp_30"
           android:orientation="horizontal">

           <TextView
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".6"
               android:textColor="@color/c_dark_blue"
               android:text="@string/any_other_purpose"/>

           <EditText
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_40"
               android:layout_weight=".4"
             android:gravity="center"
               android:background="@drawable/purpose_bg"
                />
       </LinearLayout>

       <Button
           android:id="@+id/itinearySave"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dp_40"
           android:background="@drawable/button_bg"
           android:text="@string/save"
           android:layout_marginRight="@dimen/dp_60"
           android:paddingRight="@dimen/dp_10"
           android:layout_marginTop="@dimen/dp_30"
           android:layout_marginLeft="@dimen/dp_60"
           />

   </LinearLayout>
</RelativeLayout>