<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

<!--
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile"
            android:layout_gravity="center_horizontal"
            />
-->

       <ImageView
           android:layout_width="@dimen/dp_60"
           android:layout_height="@dimen/dp_60"
           android:src="@drawable/profile"
           android:layout_marginTop="@dimen/dp_170"
           android:id="@+id/userProfile"
           android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/c_black"
                android:text="@string/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Devendra"
                android:textColor="@color/c_black"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="@color/c_black"
                android:text="@string/designation"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="@color/c_black"
                android:text="Androoid Developer"
                android:textStyle="bold"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="@color/c_black"
                android:text="@string/headquarter"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Delhi"
                android:textColor="@color/c_black"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>